@@ -34,7 +34,7 @@ if test "x$ac_cv_header_windows_h" != "xyes" ; then
 
     AC_PATH_XTRA
 
-    x_suffix="$X_LIBS $X_PRE_LIBS -lX11 -lXi -lXext -lXmu $X_EXTRA_LIBS -lm"
+    x_suffix="$X_LIBS $X_PRE_LIBS -lpthread -lX11 -lXi -lXext -lXmu $X_EXTRA_LIBS -lm"
 
 dnl =========================================================
 dnl    if test "x$x_includes" != "x"; then
@@ -160,6 +160,7 @@ AC_OUTPUT( \
 	src/ssg/Makefile \
 	src/ssg/tux/Makefile \
 	src/ssg/majik/Makefile \
+	src/ssg/viewer/Makefile \
 	src/ssg/load_save/Makefile \
 	src/ssg/state_test/Makefile \
 	src/ssg/viewer/Makefile \
